kubernetes-yaml/_examples/secrets-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: doppler-env-vars
spec:
  restartPolicy: Never
  containers:
    - name: doppler-env-vars
      image: alpine
      args: ["echo $POSTGRES_PASSWORD"] # Used for testing purposes only
      # Populates every key in the secret as an env var
